syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service HealthCheck {
    rpc Readiness (ReadinessReq) returns (ReadinessResp) {
        option (google.api.http) = {
            get: "/readiness"
        };
    }
    rpc Liveness (LivenessReq) returns (LivenessResp) {
        option (google.api.http) = {
            get: "/liveness"
        };
    }
}

message ReadinessReq {}

message ReadinessResp {
    int32 code = 1;
    string message = 2;
}

message LivenessReq {}

message LivenessResp {
    int32 code = 1;
    string message = 2;
}